# the-daily-bite-web-app

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  pcconfig.py  pcconfig_docker.py  pyproject.toml  requirements.txt  rxconfig.py  rxconfig_docker.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: Dockerfile  README.md
tests/: test_skeleton.py
tests/test_example/: test_hello.py
the_daily_bite_web_app/: __init__.py  config.py  constants.py  exceptions.py  route.py  styles.py  the_daily_bite_web_app.py
the_daily_bite_web_app/components/: footer.py  logo.py  navbar.py  sidebar.py
the_daily_bite_web_app/pages/: __init__.py  index.py  login.py  not_found.py
the_daily_bite_web_app/pages/news/: __init__.py  news_topics.py  news_topics_subscribe.py  newsletter.py  newspaper.py
the_daily_bite_web_app/states/: __init__.py  base.py  index.py  login.py  models.py  navbar.py  news_topics.py  newsletter.py  newspaper.py
the_daily_bite_web_app/templates/: webpage.py
the_daily_bite_web_app/utils/: aws_lambda.py  telemetry.py
